--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       color: #fff;
       text-align: center;
       padding: 2rem;
+      position: relative;
     }
     h1 {
       font-size: 2.5rem;
@@ -26,11 +27,15 @@
       padding: 1rem;
       border-radius: 10px;
     }
+    /* Oculta visualmente, mas mantém no fluxo para extensão capturar */
     .hidden-message {
-      display: none;
-      font-size: 2rem;
+      position: absolute;
+      left: -9999px;
+      top: 0;
+      font-size: 2.5rem;
       color: red;
       font-weight: bold;
+      width: 600px; /* só para o popup não ficar quebrado */
     }
   </style>
 </head>
