--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <!-- Hidden message that a malicious actor might hide -->
   <div class="hidden-message">
-    ⚠️ Congratulations, you found the hidden message! Now, to prove your commitment, post a photo of yourself holding this message and use the hashtag #translatinglifes. Then proceed to the next site to continue the game. Good luck!
+    🚨🚨🚨 Congratulations, you found the hidden message! Now, to prove your commitment, post a photo of yourself holding this message and use the hashtag #translatinglifes. Then proceed to the next site to continue the game. Good luck!🚨🚨🚨
   </div>
 
   <!-- For demonstration, let's show a hint that something might be hidden -->
